vkontakte: Do not destroy the export dialog (fix crash)

BUG: 286844